oscriptParser.cpp

// Generated from oscript.g4 by ANTLR 4.9.3


#include "oscriptVisitor.h"

#include "oscriptParser.h"


using namespace antlrcpp;
using namespace oscript;
using namespace antlr4;

oscriptParser::oscriptParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

oscriptParser::~oscriptParser() {
  delete _interpreter;
}

std::string oscriptParser::getGrammarFileName() const {
  return "oscript.g4";
}

const std::vector<std::string>& oscriptParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& oscriptParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- TopLevelBundleContext ------------------------------------------------------------------

oscriptParser::TopLevelBundleContext::TopLevelBundleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* oscriptParser::TopLevelBundleContext::EOF() {
  return getToken(oscriptParser::EOF, 0);
}

std::vector<oscriptParser::OscBundleElemContext *> oscriptParser::TopLevelBundleContext::oscBundleElem() {
  return getRuleContexts<oscriptParser::OscBundleElemContext>();
}

oscriptParser::OscBundleElemContext* oscriptParser::TopLevelBundleContext::oscBundleElem(size_t i) {
  return getRuleContext<oscriptParser::OscBundleElemContext>(i);
}

std::vector<tree::TerminalNode *> oscriptParser::TopLevelBundleContext::SeqSep() {
  return getTokens(oscriptParser::SeqSep);
}

tree::TerminalNode* oscriptParser::TopLevelBundleContext::SeqSep(size_t i) {
  return getToken(oscriptParser::SeqSep, i);
}

std::vector<tree::TerminalNode *> oscriptParser::TopLevelBundleContext::CommentLine() {
  return getTokens(oscriptParser::CommentLine);
}

tree::TerminalNode* oscriptParser::TopLevelBundleContext::CommentLine(size_t i) {
  return getToken(oscriptParser::CommentLine, i);
}


size_t oscriptParser::TopLevelBundleContext::getRuleIndex() const {
  return oscriptParser::RuleTopLevelBundle;
}


antlrcpp::Any oscriptParser::TopLevelBundleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitTopLevelBundle(this);
  else
    return visitor->visitChildren(this);
}

oscriptParser::TopLevelBundleContext* oscriptParser::topLevelBundle() {
  TopLevelBundleContext *_localctx = _tracker.createInstance<TopLevelBundleContext>(_ctx, getState());
  enterRule(_localctx, 0, oscriptParser::RuleTopLevelBundle);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(34);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case oscriptParser::Identifier:
      case oscriptParser::OSCPattern:
      case oscriptParser::OSCAddress:
      case oscriptParser::Int32:
      case oscriptParser::Float:
      case oscriptParser::String:
      case oscriptParser::Blob:
      case oscriptParser::LParen:
      case oscriptParser::LBracket:
      case oscriptParser::LBrace:
      case oscriptParser::CommentMessage:
      case oscriptParser::Bind: {
        enterOuterAlt(_localctx, 1);
        setState(14);
        antlrcpp::downCast<TopLevelBundleContext *>(_localctx)->first = oscBundleElem();
        setState(19);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(15);
            match(oscriptParser::SeqSep);
            setState(16);
            antlrcpp::downCast<TopLevelBundleContext *>(_localctx)->rest = oscBundleElem(); 
          }
          setState(21);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
        }
        setState(23);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == oscriptParser::SeqSep) {
          setState(22);
          match(oscriptParser::SeqSep);
        }
        setState(25);
        match(oscriptParser::EOF);
        break;
      }

      case oscriptParser::EOF:
      case oscriptParser::CommentLine: {
        enterOuterAlt(_localctx, 2);
        setState(30);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == oscriptParser::CommentLine) {
          setState(27);
          match(oscriptParser::CommentLine);
          setState(32);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(33);
        match(oscriptParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscBundleElemContext ------------------------------------------------------------------

oscriptParser::OscBundleElemContext::OscBundleElemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t oscriptParser::OscBundleElemContext::getRuleIndex() const {
  return oscriptParser::RuleOscBundleElem;
}

void oscriptParser::OscBundleElemContext::copyFrom(OscBundleElemContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LookupElemContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::LookupElemContext::Identifier() {
  return getToken(oscriptParser::Identifier, 0);
}

tree::TerminalNode* oscriptParser::LookupElemContext::OSCAddress() {
  return getToken(oscriptParser::OSCAddress, 0);
}

tree::TerminalNode* oscriptParser::LookupElemContext::OSCPattern() {
  return getToken(oscriptParser::OSCPattern, 0);
}

oscriptParser::LookupElemContext::LookupElemContext(OscBundleElemContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::LookupElemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitLookupElem(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BundleElemContext ------------------------------------------------------------------

oscriptParser::OscBundleContext* oscriptParser::BundleElemContext::oscBundle() {
  return getRuleContext<oscriptParser::OscBundleContext>(0);
}

oscriptParser::BundleElemContext::BundleElemContext(OscBundleElemContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::BundleElemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitBundleElem(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncallElemContext ------------------------------------------------------------------

oscriptParser::FuncallContext* oscriptParser::FuncallElemContext::funcall() {
  return getRuleContext<oscriptParser::FuncallContext>(0);
}

oscriptParser::FuncallElemContext::FuncallElemContext(OscBundleElemContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::FuncallElemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitFuncallElem(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MessageElemContext ------------------------------------------------------------------

oscriptParser::OscMessageContext* oscriptParser::MessageElemContext::oscMessage() {
  return getRuleContext<oscriptParser::OscMessageContext>(0);
}

oscriptParser::MessageElemContext::MessageElemContext(OscBundleElemContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::MessageElemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitMessageElem(this);
  else
    return visitor->visitChildren(this);
}
oscriptParser::OscBundleElemContext* oscriptParser::oscBundleElem() {
  OscBundleElemContext *_localctx = _tracker.createInstance<OscBundleElemContext>(_ctx, getState());
  enterRule(_localctx, 2, oscriptParser::RuleOscBundleElem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(40);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<oscriptParser::LookupElemContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(36);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << oscriptParser::Identifier)
        | (1ULL << oscriptParser::OSCPattern)
        | (1ULL << oscriptParser::OSCAddress))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<oscriptParser::FuncallElemContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(37);
      funcall();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<oscriptParser::BundleElemContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(38);
      oscBundle();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<oscriptParser::MessageElemContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(39);
      oscMessage();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscBundleContext ------------------------------------------------------------------

oscriptParser::OscBundleContext::OscBundleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t oscriptParser::OscBundleContext::getRuleIndex() const {
  return oscriptParser::RuleOscBundle;
}

void oscriptParser::OscBundleContext::copyFrom(OscBundleContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- EagerBundleContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::EagerBundleContext::LParen() {
  return getToken(oscriptParser::LParen, 0);
}

tree::TerminalNode* oscriptParser::EagerBundleContext::RParen() {
  return getToken(oscriptParser::RParen, 0);
}

std::vector<oscriptParser::OscBundleElemContext *> oscriptParser::EagerBundleContext::oscBundleElem() {
  return getRuleContexts<oscriptParser::OscBundleElemContext>();
}

oscriptParser::OscBundleElemContext* oscriptParser::EagerBundleContext::oscBundleElem(size_t i) {
  return getRuleContext<oscriptParser::OscBundleElemContext>(i);
}

std::vector<tree::TerminalNode *> oscriptParser::EagerBundleContext::SeqSep() {
  return getTokens(oscriptParser::SeqSep);
}

tree::TerminalNode* oscriptParser::EagerBundleContext::SeqSep(size_t i) {
  return getToken(oscriptParser::SeqSep, i);
}

oscriptParser::EagerBundleContext::EagerBundleContext(OscBundleContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::EagerBundleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitEagerBundle(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LazyBundleContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::LazyBundleContext::LBrace() {
  return getToken(oscriptParser::LBrace, 0);
}

tree::TerminalNode* oscriptParser::LazyBundleContext::RBrace() {
  return getToken(oscriptParser::RBrace, 0);
}

std::vector<oscriptParser::OscBundleElemContext *> oscriptParser::LazyBundleContext::oscBundleElem() {
  return getRuleContexts<oscriptParser::OscBundleElemContext>();
}

oscriptParser::OscBundleElemContext* oscriptParser::LazyBundleContext::oscBundleElem(size_t i) {
  return getRuleContext<oscriptParser::OscBundleElemContext>(i);
}

std::vector<tree::TerminalNode *> oscriptParser::LazyBundleContext::SeqSep() {
  return getTokens(oscriptParser::SeqSep);
}

tree::TerminalNode* oscriptParser::LazyBundleContext::SeqSep(size_t i) {
  return getToken(oscriptParser::SeqSep, i);
}

oscriptParser::LazyBundleContext::LazyBundleContext(OscBundleContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::LazyBundleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitLazyBundle(this);
  else
    return visitor->visitChildren(this);
}
oscriptParser::OscBundleContext* oscriptParser::oscBundle() {
  OscBundleContext *_localctx = _tracker.createInstance<OscBundleContext>(_ctx, getState());
  enterRule(_localctx, 4, oscriptParser::RuleOscBundle);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case oscriptParser::LBrace: {
        _localctx = _tracker.createInstance<oscriptParser::LazyBundleContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(42);
        match(oscriptParser::LBrace);
        setState(51);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << oscriptParser::Identifier)
          | (1ULL << oscriptParser::OSCPattern)
          | (1ULL << oscriptParser::OSCAddress)
          | (1ULL << oscriptParser::Int32)
          | (1ULL << oscriptParser::Float)
          | (1ULL << oscriptParser::String)
          | (1ULL << oscriptParser::Blob)
          | (1ULL << oscriptParser::LParen)
          | (1ULL << oscriptParser::LBracket)
          | (1ULL << oscriptParser::LBrace)
          | (1ULL << oscriptParser::CommentMessage)
          | (1ULL << oscriptParser::Bind))) != 0)) {
          setState(43);
          antlrcpp::downCast<LazyBundleContext *>(_localctx)->first = oscBundleElem();
          setState(48);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == oscriptParser::SeqSep) {
            setState(44);
            match(oscriptParser::SeqSep);
            setState(45);
            antlrcpp::downCast<LazyBundleContext *>(_localctx)->rest = oscBundleElem();
            setState(50);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(53);
        match(oscriptParser::RBrace);
        break;
      }

      case oscriptParser::LParen: {
        _localctx = _tracker.createInstance<oscriptParser::EagerBundleContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(54);
        match(oscriptParser::LParen);
        setState(63);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << oscriptParser::Identifier)
          | (1ULL << oscriptParser::OSCPattern)
          | (1ULL << oscriptParser::OSCAddress)
          | (1ULL << oscriptParser::Int32)
          | (1ULL << oscriptParser::Float)
          | (1ULL << oscriptParser::String)
          | (1ULL << oscriptParser::Blob)
          | (1ULL << oscriptParser::LParen)
          | (1ULL << oscriptParser::LBracket)
          | (1ULL << oscriptParser::LBrace)
          | (1ULL << oscriptParser::CommentMessage)
          | (1ULL << oscriptParser::Bind))) != 0)) {
          setState(55);
          antlrcpp::downCast<EagerBundleContext *>(_localctx)->first = oscBundleElem();
          setState(60);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == oscriptParser::SeqSep) {
            setState(56);
            match(oscriptParser::SeqSep);
            setState(57);
            antlrcpp::downCast<EagerBundleContext *>(_localctx)->rest = oscBundleElem();
            setState(62);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(65);
        match(oscriptParser::RParen);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscMessageContext ------------------------------------------------------------------

oscriptParser::OscMessageContext::OscMessageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t oscriptParser::OscMessageContext::getRuleIndex() const {
  return oscriptParser::RuleOscMessage;
}

void oscriptParser::OscMessageContext::copyFrom(OscMessageContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BindContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::BindContext::Bind() {
  return getToken(oscriptParser::Bind, 0);
}

oscriptParser::OscBundleElemContext* oscriptParser::BindContext::oscBundleElem() {
  return getRuleContext<oscriptParser::OscBundleElemContext>(0);
}

tree::TerminalNode* oscriptParser::BindContext::Identifier() {
  return getToken(oscriptParser::Identifier, 0);
}

tree::TerminalNode* oscriptParser::BindContext::OSCAddress() {
  return getToken(oscriptParser::OSCAddress, 0);
}

tree::TerminalNode* oscriptParser::BindContext::OSCPattern() {
  return getToken(oscriptParser::OSCPattern, 0);
}

oscriptParser::BindContext::BindContext(OscMessageContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::BindContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitBind(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BlobContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::BlobContext::Blob() {
  return getToken(oscriptParser::Blob, 0);
}

oscriptParser::BlobContext::BlobContext(OscMessageContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::BlobContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitBlob(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StringContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::StringContext::String() {
  return getToken(oscriptParser::String, 0);
}

oscriptParser::StringContext::StringContext(OscMessageContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::StringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitString(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CommentContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::CommentContext::CommentMessage() {
  return getToken(oscriptParser::CommentMessage, 0);
}

oscriptParser::CommentContext::CommentContext(OscMessageContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::CommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitComment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FloatContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::FloatContext::Float() {
  return getToken(oscriptParser::Float, 0);
}

oscriptParser::FloatContext::FloatContext(OscMessageContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::FloatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitFloat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ListContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::ListContext::LBracket() {
  return getToken(oscriptParser::LBracket, 0);
}

tree::TerminalNode* oscriptParser::ListContext::RBracket() {
  return getToken(oscriptParser::RBracket, 0);
}

std::vector<tree::TerminalNode *> oscriptParser::ListContext::SeqSep() {
  return getTokens(oscriptParser::SeqSep);
}

tree::TerminalNode* oscriptParser::ListContext::SeqSep(size_t i) {
  return getToken(oscriptParser::SeqSep, i);
}

std::vector<oscriptParser::OscBundleElemContext *> oscriptParser::ListContext::oscBundleElem() {
  return getRuleContexts<oscriptParser::OscBundleElemContext>();
}

oscriptParser::OscBundleElemContext* oscriptParser::ListContext::oscBundleElem(size_t i) {
  return getRuleContext<oscriptParser::OscBundleElemContext>(i);
}

oscriptParser::ListContext::ListContext(OscMessageContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::ListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitList(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntContext ------------------------------------------------------------------

tree::TerminalNode* oscriptParser::IntContext::Int32() {
  return getToken(oscriptParser::Int32, 0);
}

oscriptParser::IntContext::IntContext(OscMessageContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscriptParser::IntContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscriptVisitor*>(visitor))
    return parserVisitor->visitInt(this);
  else
    return visitor->visitChildren(this);
}
oscriptParser::OscMessageContext* oscriptParser::oscMessage() {
  OscMessageContext *_localctx = _tracker.createInstance<OscMessageContext>(_ctx, getState());
  enterRule(_localctx, 6, oscriptParser::RuleOscMessage);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case oscriptParser::Identifier:
      case oscriptParser::OSCPattern:
      case oscriptParser::OSCAddress:
      case oscriptParser::Bind: {
        _localctx = _tracker.createInstance<oscriptParser::BindContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(69);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << oscriptParser::Identifier)
          | (1ULL << oscriptParser::OSCPattern)
          | (1ULL << oscriptParser::OSCAddress))) != 0)) {
          setState(68);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << oscriptParser::Identifier)
            | (1ULL << oscriptParser::OSCPattern)
            | (1ULL << oscriptParser::OSCAddress))) != 0))) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        setState(71);
        match(oscriptParser::Bind);
        setState(73);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << oscriptParser::Identifier)
          | (1ULL << oscriptParser::OSCPattern)
          | (1ULL << oscriptParser::OSCAddress)
          | (1ULL << oscriptParser::Int32)
          | (1ULL << oscriptParser::Float)
          | (1ULL << oscriptParser::String)
          | (1ULL << oscriptParser::Blob)
          | (1ULL << oscriptParser::LParen)
          | (1ULL << oscriptParser::LBracket)
          | (1ULL << oscriptParser::LBrace)
          | (1ULL << oscriptParser::CommentMessage)
          | (1ULL << oscriptParser::Bind))) != 0)) {
          setState(72);
          oscBundleElem();
        }
        break;
      }

      case oscriptParser::Int32: {
        _localctx = _tracker.createInstance<oscriptParser::IntContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(75);
        match(oscriptParser::Int32);
        break;
      }

      case oscriptParser::Float: {
        _localctx = _tracker.createInstance<oscriptParser::FloatContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(76);
        match(oscriptParser::Float);
        break;
      }

      case oscriptParser::String: {
        _localctx = _tracker.createInstance<oscriptParser::StringContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(77);
        match(oscriptParser::String);
        break;
      }

      case oscriptParser::Blob: {
        _localctx = _tracker.createInstance<oscriptParser::BlobContext>(_localctx);
        enterOuterAlt(_localctx, 5);
        setState(78);
        match(oscriptParser::Blob);
        break;
      }

      case oscriptParser::LBracket: {
        _localctx = _tracker.createInstance<oscriptParser::ListContext>(_localctx);
        enterOuterAlt(_localctx, 6);
        setState(79);
        match(oscriptParser::LBracket);
        setState(81);
        _errHandler->sync(this);
